--- a/ProfSite/Views/Bravecto/contact-us.cshtml
+++ b/ProfSite/Views/Bravecto/contact-us.cshtml
@@ -38,9 +38,65 @@
                 or select an alternative region from the dropdown menu.
             </p>
             <div class="col-md-6 col-md-offset-3">
-                @Html.DropDownList("Region", new List<SelectListItem>(), "SELECT YOUR REGION", new { @class = "form-control" })
+                @Html.DropDownList("Region", (IEnumerable<SelectListItem>)ViewBag.Countries, "SELECT YOUR REGION", new { @class = "form-control" })
             </div>
         </div>
     </div>
 </div>
+<div class="container static-body contacts-container">
+    <div class="region-header">
+        <h3>
+            [REGION NAME]
+        </h3>
+        <h3>Corportate Headquarters</h3>
+    </div>
+    <address>
+        <em>2 Giralda Farms</em>
+        <em>Madison, NJ 07940</em>
+        <em>United States</em>
+    </address>
+    <div class="contacts-list row">
+        <div class="contact-item col-md-6">
+            <h4>REGION NAME</h4>
+            <div class="contact-item-body">
+                <h5>John Smith</h5>
+                <p class="title">Title</p>
+                <p>MSD Animal Health</p>
+                <ul class="list-unstyled contact-detail-list">
+                    <li>
+                        <span class="contact-detail-label">TEL</span>
+                        <span class="contact-detail">+1 123 456 789</span>
+                    </li>
+                    <li>
+                        <span class="contact-detail-label">FAX</span>
+                        <span class="contact-detail">+1 123 456 789</span>
+                    </li>
+                    <li>
+                        <span class="contact-detail-label">EMAIL</span>
+                        <span class="contact-detail">
+                            <a href="mailto:john.smith@merck.com">john.smith@merck.com</a>
+                        </span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="load-more-row row">
+        <div class="col-md-6 col-lg-offset-3">
+            <a href="#" class="load-more">
+                LOAD MORE CONTACTS<br />
+                <i class="glyphicon glyphicon-arrow-down"></i>
+            </a>
+        </div>
+    </div>
+</div>
 
+@section scripts {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('a.load-more').on('click', function (e) {
+                e.preventDefault();
+            });
+        });
+    </script>
+}
