--- a/ProfSite/Views/Bravecto/index.cshtml
+++ b/ProfSite/Views/Bravecto/index.cshtml
@@ -46,7 +46,7 @@
                     <li role="presentation"><a href="/bravecto/contact-us">CONTACT US</a></li>
                 </ul>
             </nav>
-            <a href="/bravecto" class="navbar-brand bravovets">
+            <a href="/bravecto/index" class="navbar-brand bravovets">
                 <img src="/images/logo-bravecto@2x.png" alt="Bravecto Logo" class="logo-bravecto">
             </a>
         </div>
