--- a/ProfSite/Views/Bravecto/resources.cshtml
+++ b/ProfSite/Views/Bravecto/resources.cshtml
@@ -1,7 +1,180 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Resources";
+    ViewBag.SelectedNode = "resources";
     Layout = "~/Views/Shared/_LayoutBravecto.cshtml";
 }
 
 
+<div class="container">
+    <div class="row simpleheaderrow">
+        <h2>Resources</h2>
+    </div>
+</div>
+<div class="jumbotron resources-page">
+    <div class="container">
+        <div class="jumbo-home-overlay">
+            <div class="row top-jumbo-overlay">
+                <h1>Extend your resources</h1>
+            </div>
+            <div class="bottom-jumbo-overlay">
+                <h4>
+                    Discover how Bravecto can help you grow your practice and provide the best care to every dog
+                    you treat with these informative and educational resources.
+                </h4>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container static-body resources-body">
+    <div class="static-overlay bggreen">
+        <div class="row">
+            <div class="col-md-6">
+                <p>
+                    Merck Animal Health, the makers of Bravecto, know that in order
+                    to prescribe Bravecto to your customers, you need the right resources to ensure
+                    success. That's why we've curated resources to help you keep up to date with clinical
+                    reserch, learn more about Bravecto, and discover more ways to attract and build
+                    loyalty from customers.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <h2>LATEST RESOURCE</h2>
+                <div class="bottom-support-download-row">
+                    <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
+                    <div class="bottom-support-download">
+                        <h3>GOOD MEDICINE GROW BUSINESS</h3>
+                        <p>
+                            Discover how prescribing innovative treatments to the animals
+                            in your care enhances business growth with this new eBook.
+                        </p>
+                        <a class="btn btn-default" href="#">
+                            DOWNLOAD PDF
+                            <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="static-body resources-body grey">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h3>FILTER RESOURCES BY TOPIC / TYPE</h3>
+                <p>
+                    Check the boxes to the right to find additional resources
+                    on using social media to grow your business.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="checkbox-wrapper">
+                            <label>
+                                <input type="checkbox" value="informationalhowto" />
+                                INFORMATIONAL HOW-TO
+                            </label>
+                        </div>
+                        <div class="checkbox-wrapper">
+                            <label>
+                                <input type="checkbox" value="video" />
+                                VIDEO
+                            </label>
+                        </div>
+                        <div class="checkbox-wrapper">
+                            <label>
+                                <input type="checkbox" value="clinicdisplayuse" />
+                                CLINIC DISPLAY USE
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="checkbox-wrapper">
+                            <label>
+                                <input type="checkbox" value="signage" /> SIGNAGE
+                            </label>
+                        </div>
+                        <div class="checkbox-wrapper">
+                            <label>
+                                <input type="checkbox" value="petownerdistribution" /> PET OWNER DISTRIBUTION
+                            </label>
+                        </div>
+                        <div class="checkbox-wrapper">
+                            <label>
+                                <input type="checkbox" value="researchpaper" />
+                                RESEARCH PAPER
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container static-body resources-container">
+    <div class="resources-list row">
+        <div class="resource-item col-md-6">
+            <h4>VIDEO</h4>
+            <div class="resource-item-body">
+                <div class="resource-content">
+                    <h5>BRAVECTO OVERVIEW VIDEO</h5>
+                    <p>Lorem ipsum</p>
+                    <div class="action-wrapper">
+                        <a class="btn btn-default" href="#">
+                            VIEW VIDEO
+                            <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                        </a>
+                        <a href="#">
+                            Share this
+                            <i class="icon icon-share"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="resource-media-item">
+                    <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
+                </div>
+            </div>
+        </div>
+        <div class="resource-item col-md-6">
+            <h4>POSTER</h4>
+            <div class="resource-item-body">
+                <div class="resource-content">
+                    <h5>FLEA AND TICK POSTER</h5>
+                    <p>Lorem ipsum</p>
+                    <div class="action-wrapper">
+                        <a class="btn btn-default" href="#">
+                            DOWNLOAD
+                            <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                        </a>
+                        <a href="#">
+                            Share this
+                            <i class="icon icon-share"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="resource-media-item">
+                    <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="load-more-row row">
+        <div class="col-md-6 col-lg-offset-3">
+            <a href="#" class="load-more">
+                LOAD MORE RESOURCES<br />
+                <i class="glyphicon glyphicon-arrow-down"></i>
+            </a>
+        </div>
+    </div>
+</div>
+
+@section scripts {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('a.load-more').on('click', function (e) {
+                e.preventDefault();
+            });
+        });
+    </script>
+}
