--- a/ProfSite/Views/Shared/_LayoutBravecto.cshtml
+++ b/ProfSite/Views/Shared/_LayoutBravecto.cshtml
@@ -55,7 +55,7 @@
                     <li class="@(ViewBag.SelectedNode == "contactus" ? "active" : "")" role="presentation"><a href="/bravecto/contact-us">CONTACT US</a></li>
                 </ul>
             </nav>
-            <a href="/bravecto" class="navbar-brand bravovets">
+            <a href="/bravecto/index" class="navbar-brand bravovets">
                 <img src="/images/logo-bravecto@2x.png" alt="Bravecto Logo" class="logo-bravecto">
             </a>
         </div>
