--- a/ProfSite/Views/Bravecto/facebook.cshtml
+++ b/ProfSite/Views/Bravecto/facebook.cshtml
@@ -1,6 +1,7 @@
 ﻿@model FacebookViewModel
 @{
     ViewBag.Title = "Facebook";
+    ViewBag.SelectedNode = "facebook";
     Layout = "~/Views/Shared/_LayoutBravecto.cshtml";
 }
 
