--- a/ProfSite/Views/Bravecto/twitter.cshtml
+++ b/ProfSite/Views/Bravecto/twitter.cshtml
@@ -1,6 +1,7 @@
 ﻿@model TwitterViewModel
 @{
     ViewBag.Title = "Twitter";
+    ViewBag.SelectedNode = "twitter";
     Layout = "~/Views/Shared/_LayoutBravecto.cshtml";
 }
 
