--- a/ProfSite/Views/Bravecto/unlinked-accounts.cshtml
+++ b/ProfSite/Views/Bravecto/unlinked-accounts.cshtml
@@ -1,7 +1,260 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "unlinkedaccounts";
     Layout = "~/Views/Shared/_LayoutBravecto.cshtml";
 }
 
-
+<div class="container">
+    <div class="row simpleheaderrow">
+        <h2>BRAVOVETS</h2>
+    </div>
+</div>
+<div class="jumbotron unlinkedaccounts-page">
+    <div class="container">
+        <div class="jumbo-home-overlay">
+            <div class="row top-jumbo-overlay">
+                <h1>Extend your network with Bravovets</h1>
+            </div>
+            <div class="bottom-jumbo-overlay">
+                <h4>
+                    Link your Facebook and Twitter accounts to Bravovets for support in strengthening your ties
+                    with new and existing customers through social media.
+                </h4>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container static-body unlinkedaccounts-body top">
+    <div class="static-overlay bggreen">
+        <p>
+            Pet owners want the best for their dogs. With Bravecto, you can give it to them with the most
+            advanced flea and tick protection available in a chew.
+        </p>
+        <p>
+            And, with BravoVets, you can harness the power of social media to grow your visibility among pet
+            owners. Link your Facebook and Twitter business accounts to BravoVets for support in strengthening
+            your ties via the largest platforms available.
+        </p>
+    </div>
+</div>
+<div class="static-body unlinkedaccounts-body grey">
+    <div class="container">
+        <div class="row">
+            <h2>EXPAND YOUR SOCIAL VISIBILITY</h2>
+        </div>
+        <div class="row">
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-2">
+                        <img src="~/Content/img/fb-icon-lg.png" />
+                    </div>
+                    <div class="col-md-10">
+                        <p class="header">CONNECT WITH PET OWNERS</p>
+                        <p>
+                            The key to reaching pet owners in your community is to be present where they are.
+                            Facebook, with its more than 1.25 billion members, makes that a high probability.
+                            <a href="/">Link your Facebook</a> to share content that can help you grow relationships with your customers
+                            by demonstrating your clinic's expertise, knowledge and caring on a personal level.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2">
+                        <img src="~/Content/img/twitter-icon-lg.png" />
+                    </div>
+                    <div class="col-md-10">
+                        <p class="header">LEAD THE DISCUSSION</p>
+                        <p>
+                            Twitter can be an excellent platform to establish yourself and your clinic as an
+                            authority in leading-edge veterinary treatments. <a href="/">Link your Twitter</a>
+                            to build and reach an audience of followers - of both your customers and others around the world
+                            - with the latest news and trends relevant to animal health.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2">
+                        <img src="~/Content/img/Bravecto_HP_UnlinkedAccounts_img.jpg" />
+                    </div>
+                    <div class="col-md-10">
+                        <p class="header">UPDATE YOUR PROFILE</p>
+                        <p>
+                            <a href="/">Update your profile</a> and allow Facebook and Twitter to link
+                            your business pages with previous social information on BravoVets. None of the content
+                            of your personal accounts will be seen by fans/followers of your business pages.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h3>LINK YOUR SOCIAL<br /> ACCOUNTS HERE</h3>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container static-body unlinkedaccounts-body">
+    <div class="static-overlay bggreen">
+        <p>
+            Your online presence is the single most powerful tool available for building engagement
+            and involvement with pet owners. That's because pet owners actively use the internet to connect with
+            like-minded animal lovers and to find useful information about pet health and wellness. In fact, 70%
+            of pet owners spend up to 30 minutes every week reviewing pet-related topics online.
+        </p>
+        <p>
+            Social media can help you connect with those information seekers - allowing you to engage current
+            and potential customers, gain real insight into your audience and understand their needs.
+        </p>
+        <p>
+            From one-on-one interactions to sharing curated content. BravoVets helps you reach, connect and
+            create deeper relationships by communicating the sort of information that demonstrates your clinic's expertise,
+            knowledge and caring on a personal level.
+        </p>
+    </div>
+</div>
+<div class="static-section linkedaccounttop">
+    <div class="container">
+        <div class="static-overlay bggreen">
+            <h2>EXTEND YOUR CONNECTION TO PET-OWNERS <br />IN YOUR COMMUNITY WITH FACEBOOK</h2>
+        </div>
+    </div>
+</div>
+<div class="container static-body">
+    <h2 class="green linkedaccountmainheader">CREATING A PRESENCE ON FACEBOOK REQUIRES SOME UP-FRONT STRATEGY AND SETUP.</h2>
+    <div class="text-center">
+        <img src="~/Content/img/fb-icon-lg.png" />
+    </div>
+    <div class="row facebook-details-row">
+        <div class="col-md-4">
+            <p>
+                To create your business page, first log in to your personal
+                Facebook account. (Don't worry - this doesn't that fans of your clinic
+                will see any of the personal details or content in your profile, it's merely a formality).
+                <br />
+                Then click the small "down arrow" icon on the far right of the page, near your name,
+                and choose "Create a page".
+            </p>
+        </div>
+        <div class="col-md-8">
+            <ul class="list-unstyled">
+                <li>
+                    <span class="label label-green">1</span>
+                    <p>
+                        <span class="header">Choose your classification</span>
+                        Select "Local business of place". This will help your business come up in relevant
+                        searches. Next, choose the category your business falls into and enter your business's name.
+                    </p>
+                </li>
+                <li>
+                    <span class="label label-green">2</span>
+                    <p>
+                        <span class="header">Complete 'Basic information'</span>
+                        Select a high-resoulution image of your company's logo to set as your profile picture
+                        and a larger image for your "cover" photo. Complete the "About" section by adding a short summary
+                    </p>
+                </li>
+                <li>
+                    <span class="label label-green">3</span>
+                    <p>
+                        <span class="header">Request a customized Facebook address</span>
+                        Request an address like Facebook.com/yourcompanyname, making it easy to include within other marketing
+                        materials and channels.
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="row simpleheaderrow">
+        <h3>Now you're ready to connect your Facebook page to BravoVets!</h3>
+        <p>
+            <a class="btn btn-default" href="#" role="button">
+                LINK YOUR FACEBOOK
+                <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+            </a>
+        </p>
+    </div>
+</div>
+<div class="static-section unlinkedaccountbottom">
+    <div class="container">
+        <div class="static-overlay bggreen">
+            <h2>EXTEND YOUR AUTHORITY IN LEADING-EDGE <br />VETERINARY TREATMENTS ON TWITTER</h2>
+        </div>
+    </div>
+</div>
+<div class="container static-body">
+    <h2 class="green linkedaccountmainheader">START YOUR JOURNEY TO A BIGGER FOLLOWING WITH A FEW SIMPLE STEPS.</h2>
+    <div class="text-center">
+        <img src="~/Content/img/twitter-icon-lg.png" />
+        <h3>Creating a Twitter account for your business is quick and easy.</h3>
+    </div>
+    <div class="row twitter-details-row">
+        <div class="col-md-4">
+            <p>
+                First, use the email address of the person who will be managing your Twitter account to set it up, then:
+            </p>
+        </div>
+        <div class="col-md-8">
+            <ul class="list-unstyled">
+                <li>
+                    <span class="label label-green">1</span>
+                    <p>
+                        Enter the full name of your business, as you'd like it to appear on your profile.
+                    </p>
+                </li>
+                <li>
+                    <span class="label label-green">2</span>
+                    <p>
+                        Enter the username (also known as a handle) you wish to be referred to as.
+                        <br />This is the name other Twitter followers will use to interact with you.
+                    </p>
+                </li>
+                <li>
+                    <span class="label label-green">3</span>
+                    <p>
+                        Create a unique, secure password.
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="row twitter-details-row last">
+        <div class="col-md-4">
+            <p>
+                Next, it's time to personalize the account for your clinic. To do so, click "Profile" and complete
+                the following steps:
+            </p>
+        </div>
+        <div class="col-md-8">
+            <ul class="list-unstyled">
+                <li>
+                    <span class="label label-green">1</span>
+                    <p>
+                        Complete your profile by entering your clinic name, location, a link to your website and a short
+                        (160 characters or less) summary of your business or philosophy.
+                    </p>
+                </li>
+                <li>
+                    <span class="label label-green">2</span>
+                    <p>
+                        Enter the username (also known as a handle) you wish to be referred to as.
+                        This is the name other Twitter followers will use to interact with you.
+                    </p>
+                </li>
+                <li>
+                    <span class="label label-green">3</span>
+                    <p>
+                        If you'd like, you can customize the background to reflect your practice's personality
+                        under the "Design" tab.
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="row simpleheaderrow">
+        <h3>Now you're ready to connect your Twitter to BravoVets!</h3>
+        <p>
+            <a class="btn btn-default" href="#" role="button">
+                LINK YOUR TWITTER
+                <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+            </a>
+        </p>
+    </div>
+</div>
